fixed tests, added spring to domains